2/26/24 horizontal overflow issue addressed

--- a/PMT/PMT/Styles/styleDash.scss
+++ b/PMT/PMT/Styles/styleDash.scss
@@ -15,6 +15,7 @@
 
 html {
   transition: font-size 0.25s;
+  overflow-x: clip;
 }
 
 body {
@@ -392,14 +393,12 @@ select {
   }
 }
 .nav-space {
-  width: 100vw;
+  width: 100%;
   height: 10vh;
 }
 
 .mobile-nav {
-  @include Flex-Col(center, flex-start, 100%, 100%);
-  width: 100vw;
-  height: 10vh;
+  @include Flex-Col(center, flex-start, 100%, 10vh);
   background-color: $cHeader;
   border: 1px solid black;
   font-size: 1.5rem;
